--- a/play/kitchensink.html
+++ b/play/kitchensink.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>onsen prototype</title>
+  <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
+  <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
+  <link rel="stylesheet" href="prototype.css">
+  <script src="/dist/onsenui/js/onsenui.js"></script>
+  <script src="kitchensink.js"></script>
+</head>
+<body>
+
+
 <ons-navigator id="appNavigator" swipeable swipe-target-width="80px">
   <ons-page>
     <ons-splitter id="appSplitter">
@@ -1135,3 +1149,6 @@
     border-left: 1px solid #bbb;
   }
 </style>
+
+</body>
+</html>
