--- a/play/old/tutorial.html
+++ b/play/old/tutorial.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Onsen Tutorial</title>
-  <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
+
+  <!--<link rel="stylesheet" href="lib/onsen/css/onsenui.css">-->
+  <!--<link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">-->
+  <!--<link rel="stylesheet" href="style.css">-->
+  <!--<script src="lib/onsen/js/onsenui.js"></script>-->
+
+  <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
+  <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
   <link rel="stylesheet" href="style.css">
-  <script src="lib/onsen/js/onsenui.js"></script>
+  <script src="/dist/onsenui/js/onsenui.js"></script>
+
+
   <script src="tutorial.js"></script>
 </head>
 <body>
