--- a/play/old/todo.html
+++ b/play/old/todo.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Onsen UI Memo App 2.0</title>
+  <title>onsen todo</title>
 
-  <script src="lib/onsen/js/onsenui.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
 
-  <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
+  <!--<link rel="stylesheet" href="lib/onsen/css/onsenui.css">-->
+  <!--<link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">-->
+  <!--<link rel="stylesheet" href="style.css">-->
+  <!--<script src="lib/onsen/js/onsenui.js"></script>-->
+
+  <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
+  <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
   <link rel="stylesheet" href="style.css">
+  <script src="/dist/onsenui/js/onsenui.js"></script>
+
 
 </head>
 
