clear render for html-play

--- a/play/kitchensink/index.html
+++ b/play/kitchensink/index.html
@@ -5,7 +5,7 @@
   <title>onsen prototype</title>
   <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
-  <link rel="stylesheet" href="prototype/prototype.css">
+  <link rel="stylesheet" href="../prototype/prototype.css">
   <script src="/dist/onsenui/js/onsenui.js"></script>
   <script src="kitchensink.js"></script>
 </head>
