--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -177,12 +177,12 @@
           <div class="center">
             User Queries
           </div>
-          <ons-page>
-            <ons-button onclick="showAlert()">Alert</ons-button>
-            <ons-button onclick="showConfirm()">Confirm</ons-button>
-            <ons-button onclick="showPrompt()">Prompt</ons-button>
-            <ons-button onclick="showToast()">Toast</ons-button>
-          </ons-page>
+<!--          <ons-page>-->
+<!--            <ons-button onclick="showAlert()">Alert</ons-button>-->
+<!--            <ons-button onclick="showConfirm()">Confirm</ons-button>-->
+<!--            <ons-button onclick="showPrompt()">Prompt</ons-button>-->
+<!--            <ons-button onclick="showToast()">Toast</ons-button>-->
+<!--          </ons-page>-->
           <div class="expandable-content">
             <ons-list-item onclick="showToast('showToast()')">
               <ons-icon fixed-width class="list-item__icon" icon="fa-bolt" size="16px"></ons-icon>
