--- a/play/html-play/index.html
+++ b/play/html-play/index.html
@@ -13,6 +13,19 @@
   <script src="/dist/tgi-interface-onsen2.js"></script>
 </head>
 <body>
+<template id="loading.html">
+  <ons-page id="loader">
+    <ons-toolbar id="loader-toolbar">
+      <div class="left">
+        <ons-toolbar-button onclick="document.querySelector('#menu').open()">
+          <ons-icon icon="md-menu"></ons-icon>
+        </ons-toolbar-button>
+      </div>
+      <div class="center" style="opacity: 0.6">Loading...</div>
+    </ons-toolbar>
+    <ons-progress-bar indeterminate></ons-progress-bar>
+  </ons-page>
+</template>
 <template id="home.html">
   <ons-page id="home">
     <ons-toolbar id="home-toolbar">
@@ -29,5 +42,6 @@
   </ons-page>
 </template>
 <script type="text/javascript" src="html-play.js"></script>
+<script>document.querySelector('#navigator').resetToPage('loading.html');</script>
 </body>
 </html>
