--- a/play/html-play-presentation/index.html
+++ b/play/html-play-presentation/index.html
@@ -41,6 +41,35 @@
     </p>
   </ons-page>
 </template>
+<!--<template id="best.html"><ons-page id="best"><ons-toolbar id="best-toolbar"><div class="left"><ons-toolbar-button onclick="document.querySelector('#menu').open()"><ons-icon icon="md-menu"></ons-icon></ons-toolbar-button></div><div class="center">Test</div></ons-toolbar></ons-page></template>-->
+<template id="test.html">
+  <ons-page id="test">
+    <ons-toolbar id="test-toolbar">
+      <div class="left">
+        <ons-toolbar-button onclick="document.querySelector('#menu').open()">
+          <ons-icon icon="md-menu"></ons-icon>
+        </ons-toolbar-button>
+      </div>
+      <div class="center">Test</div>
+    </ons-toolbar>
+    <p style="text-align: center; opacity: 0.6; padding: 20px;">
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+      test test test test test test test test test test
+    </p>
+  </ons-page>
+</template>
 <script type="text/javascript" src="html-play-presentation.js"></script>
 <script>document.querySelector('#navigator').resetToPage('loading.html');</script>
 </body>
