--- a/play/html-play-presentation/index.html
+++ b/play/html-play-presentation/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
   <link rel="stylesheet" href="html-play-presentation.css">
+  <script src="/dist/marked/marked.js"></script>
   <script src="/dist/onsenui/js/onsenui.js"></script>
   <script src="/dist/tgi-interface-onsen2.js"></script>
 </head>
@@ -36,12 +37,12 @@
       </div>
       <div class="center">Home</div>
     </ons-toolbar>
+    <div id="pigfucker"></div>
     <p style="text-align: center; opacity: 0.6; padding: 20px;">
-      This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page. This is the home page.
+      This is the home page.
     </p>
   </ons-page>
 </template>
-<!--<template id="best.html"><ons-page id="best"><ons-toolbar id="best-toolbar"><div class="left"><ons-toolbar-button onclick="document.querySelector('#menu').open()"><ons-icon icon="md-menu"></ons-icon></ons-toolbar-button></div><div class="center">Test</div></ons-toolbar></ons-page></template>-->
 <template id="test.html">
   <ons-page id="test">
     <ons-toolbar id="test-toolbar">
@@ -52,20 +53,8 @@
       </div>
       <div class="center">Test</div>
     </ons-toolbar>
+    <div id="cocksucker"></div>
     <p style="text-align: center; opacity: 0.6; padding: 20px;">
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
-      test test test test test test test test test test
       test test test test test test test test test test
     </p>
   </ons-page>
