--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -56,8 +56,38 @@
       <div class="center">Form</div>
     </ons-toolbar>
     <ons-list>
-      <ons-list-header>Header Here</ons-list-header>
+      <ons-list-title>ons-list-title</ons-list-title>
 
+        <ons-list-item>ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item
+                       ons-list-item ons-list-item ons-list-item ons-list-item
+        </ons-list-item>
+        <ons-list-item>ons-list-item ons-list-item ons-list-item ons-list-item ons-list-item</ons-list-item>
+        <ons-list-item>ons-list-item ons-list-item ons-list-item</ons-list-item>
+        <ons-list-item>ons-list-item</ons-list-item>
+        <ons-list-title>
+          <h4>H4 here</h4>
+          <p>p here</p>
+          <p>p here</p>
+        </ons-list-title>
+
+      <ons-list-header>Header Here</ons-list-header>
+      <ons-list-item class="input-items">
+        <div class="left" style="width: 96px" align="right">
+          <label style="width: 96px; font-size:90%">label</label>
+          <!--Only include with material-->
+          &nbsp;&nbsp;
+        </div>
+        <label class="center">
+          <label style="font-weight: ">label</label>
+        </label>
+      </ons-list-item>
+      <ons-list-header></ons-list-header>
       <ons-list-item class="input-items">
         <div class="left" style="width: 96px" align="right">
           <label style="width: 96px; font-size:90%">Name</label>
@@ -68,7 +98,6 @@
           <ons-input id="name-input" maxlength="20" placeholder="▫ ▫ ▫"></ons-input>
         </label>
       </ons-list-item>
-
       <ons-list-item class="input-items">
         <div class="left" style="width: 96px" align="right">
           <label style="width: 96px; font-size:90%">Address</label>
@@ -79,7 +108,6 @@
           <ons-input id="birthday-input" type="date"></ons-input>
         </label>
       </ons-list-item>
-
       <ons-list-item class="input-items">
         <div class="left" style="width: 96px" align="right">
           <label for="sex-switch1" style="width: 96px; font-size:90%">Check this checkbox out&nbsp;</label>
@@ -90,8 +118,6 @@
           <ons-switch id="sex-switch" input-id="sex-switch1" checked="true"></ons-switch>
         </div>
       </ons-list-item>
-
-
       <ons-list-item class="input-items">
         <div class="left" style="width: 96px" align="right">
           <label style="width: 96px; font-size:90%">Food</label>
@@ -113,7 +139,6 @@
 
         </label>
       </ons-list-item>
-
       <section style="padding: 16px">
         <p></p>
         <div style="text-align:center">
@@ -177,12 +202,12 @@
           <div class="center">
             User Queries
           </div>
-<!--          <ons-page>-->
-<!--            <ons-button onclick="showAlert()">Alert</ons-button>-->
-<!--            <ons-button onclick="showConfirm()">Confirm</ons-button>-->
-<!--            <ons-button onclick="showPrompt()">Prompt</ons-button>-->
-<!--            <ons-button onclick="showToast()">Toast</ons-button>-->
-<!--          </ons-page>-->
+          <!--          <ons-page>-->
+          <!--            <ons-button onclick="showAlert()">Alert</ons-button>-->
+          <!--            <ons-button onclick="showConfirm()">Confirm</ons-button>-->
+          <!--            <ons-button onclick="showPrompt()">Prompt</ons-button>-->
+          <!--            <ons-button onclick="showToast()">Toast</ons-button>-->
+          <!--          </ons-page>-->
           <div class="expandable-content">
             <ons-list-item onclick="showToast('showToast()')">
               <ons-icon fixed-width class="list-item__icon" icon="fa-bolt" size="16px"></ons-icon>
@@ -223,7 +248,7 @@
 </ons-splitter>
 </body>
 <script>
-  document.querySelector('#navigator').resetToPage('home.html');
+  document.querySelector('#navigator').resetToPage('form.html');
   // document.querySelector('#menu').open();
 </script>
 <script>
