--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -84,7 +84,7 @@
           &nbsp;&nbsp;
         </div>
         <label class="center">
-          <label style="font-weight: ">label</label>
+          <label style="font-weight:revert ">label</label>
         </label>
       </ons-list-item>
       <ons-list-header></ons-list-header>
@@ -95,17 +95,17 @@
           &nbsp;&nbsp;
         </div>
         <label class="center">
-          <ons-input id="name-input" maxlength="20" placeholder="▫ ▫ ▫"></ons-input>
+          <ons-input id="name-input" maxlength="20" placeholder="Name"></ons-input>
         </label>
       </ons-list-item>
       <ons-list-item class="input-items">
         <div class="left" style="width: 96px" align="right">
-          <label style="width: 96px; font-size:90%">Address</label>
+          <label style="width: 96px; font-size:90%">Birth Date</label>
           <!--Only include with material-->
           &nbsp;&nbsp;
         </div>
         <label class="center">
-          <ons-input id="birthday-input" type="date"></ons-input>
+          <ons-input id="birthday-input" type="date" placeholder="MMDDYYYY" input-min-width-95p></ons-input>
         </label>
       </ons-list-item>
       <ons-list-item class="input-items">
