--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -171,6 +171,20 @@
           </ons-select>
         </label>
       </ons-list-item>
+      <ons-list-item class="list-item">
+        <div class="left" style="width: 96px" align="right">
+          <label style="width: 96px; font-size:90%"></label>
+          <!--Only include with material-->
+          &nbsp;&nbsp;
+        </div>
+        <div class="center">
+          <ons-button modifier="cta" onclick="alert('Button 1')">Button1</ons-button>
+          <ons-button onclick="alert('Button 2')">Button2</ons-button>
+          <ons-button modifier="light" onclick="alert('Button 3')">Button3</ons-button>
+
+        </div>
+
+      </ons-list-item>
       <section style="padding: 16px">
         <p></p>
         <div style="text-align:center">
